--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Angular 2 Simple Modal Demo</title>
+		<title>Angular 2 Dual-Listbox Demo</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">    
 		<base href="../">
