--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>Angular 2 Dual-Listbox Demo</title>
 	<meta charset="UTF-8">
+	<meta name="author" content="David Czeck">
 	<meta name="viewport" content="width=device-width, initial-scale=1">	
 
 	<base href="">
