--- a/demo/index.html
+++ b/demo/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Angular 2 Dual-Listbox Demo</title>
 		<meta charset="UTF-8">
+		<meta name="author" content="David Czeck">
 		<meta name="viewport" content="width=device-width, initial-scale=1">    
 		<base href="../">
 
@@ -17,8 +18,8 @@
 		<!-- Polyfill(s) for older browsers -->
 	    <script src="https://npmcdn.com/core-js/client/shim.min.js"></script>
 
-		<script src="https://npmcdn.com/zone.js@0.6.12?main=browser"></script>
-		<script src="https://npmcdn.com/reflect-metadata@0.1.3"></script>
+		<script src="https://npmcdn.com/zone.js@0.6.17?main=browser"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/reflect-metadata/0.1.8/Reflect.js"></script>
 	    <script src="https://npmcdn.com/systemjs@0.19.27/dist/system.src.js"></script>
 		
 		<script src="demo/systemjs.config.js"></script>
