--- a/demo/index.html
+++ b/demo/index.html
@@ -13,14 +13,14 @@
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
     	    integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-		<script src="https://npmcdn.com/typescript@1.8.10/lib/typescript.js"></script> 
+		<script src="https://unpkg.com/typescript@1.8.10/lib/typescript.js"></script> 
 
 		<!-- Polyfill(s) for older browsers -->
-	    <script src="https://npmcdn.com/core-js/client/shim.min.js"></script>
+	    <script src="https://unpkg.com/core-js/client/shim.min.js"></script>
 
-		<script src="https://npmcdn.com/zone.js@0.6.17?main=browser"></script>
+		<script src="https://unpkg.com/zone.js@0.6.17?main=browser"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/reflect-metadata/0.1.8/Reflect.js"></script>
-	    <script src="https://npmcdn.com/systemjs@0.19.27/dist/system.src.js"></script>
+	    <script src="https://unpkg.com/systemjs@0.19.27/dist/system.src.js"></script>
 		
 		<script src="demo/systemjs.config.js"></script>
 		<script>
