--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Angular 2 Dual-Listbox Demo</title>
+		<title>Angular 2+ Dual-Listbox Demo</title>
 		<meta charset="UTF-8">
 		<meta name="author" content="David Czeck">
 		<meta name="viewport" content="width=device-width, initial-scale=1">    
@@ -12,14 +12,13 @@
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
     	    integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-		<script src="https://unpkg.com/typescript@2.0.10/lib/typescript.js"></script> 
+	    <script src="https://unpkg.com/typescript@2.2.0/lib/typescript.js"></script> 
 
 		<!-- Polyfill(s) for older browsers -->
 	    <script src="https://unpkg.com/core-js/client/shim.min.js"></script>
 
-		<script src="https://unpkg.com/zone.js@0.7.4?main=browser"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/reflect-metadata/0.1.8/Reflect.js"></script>
-	    <script src="https://unpkg.com/systemjs@0.19.40/dist/system.src.js"></script>
+	    <script src="https://unpkg.com/zone.js@0.8.4?main=browser"></script>
+	    <script src="https://unpkg.com/systemjs@0.19.47/dist/system.src.js"></script>
 		
 		<script src="demo/systemjs.config.js"></script>
 		<script>
@@ -31,7 +30,7 @@
 	<body>
 		<demo-app><div style="margin:30px;">Loading...</div></demo-app>
 
-		<a href="https://github.com/czeckd/angular2-dual-listbox"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
+		<a href="https://github.com/czeckd/angular-dual-listbox"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
 	</body>
 
 
