--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
 	<script src="systemjs.config.js"></script>
 	<script>
+// document.locale = 'es';
+		System.config({map:{text:'systemjs-text-plugin.js'}});
 		System.import('app').catch(function(err){ console.error(err); });
 	</script>
 </head>
