Add production build

--- a/index.html
+++ b/index.html
@@ -1,35 +1,21 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-	<title>Angular 2+ Dual-Listbox Demo</title>
-	<meta charset="UTF-8">
-	<meta name="author" content="David Czeck">
-	<meta name="viewport" content="width=device-width, initial-scale=1">	
+	<meta charset="utf-8">
+	<title>Angular Dual Listbox Demo</title>
+	<base href="/">
 
-	<base href="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-	<script>
-		if (window.location.href.indexOf('github.io') !== -1 && window.location.href.indexOf('demo') === -1) {
-			window.location.href = window.location.href + 'demo/';
-		}
-	</script>
-
-	<!-- Polyfill(s) for older browsers -->
-	<script src="node_modules/core-js/client/shim.min.js"></script>
-
-	<script src="node_modules/zone.js/dist/zone.js"></script>
-	<script src="node_modules/reflect-metadata/Reflect.js"></script>
-	<script src="node_modules/systemjs/dist/system.src.js"></script>
-
-	<script src="systemjs.config.js"></script>
-	<script>
-		System.import('app').catch(function(err){ console.error(err); });
-	</script>
-</head>
-  
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="styles.09e2c710755c8867a460.css"></head>
 <body>
-	<demo-app><div style="margin:30px;">Loading...</div></demo-app>
-</body>
+	<app-demo></app-demo>
+
+	<a href="https://github.com/czeckd/angular-dual-listbox"><img style="position: absolute; top: 0; right: 0; border: 0;"
+		src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67"
+		alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
+<script src="runtime-es2015.858f8dd898b75fe86926.js" type="module"></script><script src="polyfills-es2015.559e7c8b3a629fdb5581.js" type="module"></script><script src="runtime-es5.741402d1d47331ce975c.js" nomodule></script><script src="polyfills-es5.405730e5ac8f727bd7d7.js" nomodule></script><script src="main-es2015.b2d157b59913657ceed8.js" type="module"></script><script src="main-es5.8fa4983e9b425b6ed66d.js" nomodule></script></body>
 </html>
